# ratchet-cli

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PHASE5_REPORT.md  VALIDATORS.md
src/ratchet_cli/: __init__.py  __main__.py  cli.py  state.py  validators.py
src/ratchet_cli/commands/: add.py  init.py  next.py  reset.py  skill.py  status.py  submit.py  validate.py
src/ratchet_cli/templates/: SKILL.md
src/ratchet_cli/templates/validators_py/: build.py  hurl.py  lint.py  test.py
src/ratchet_cli/templates/validators_sh/: build.sh  hurl.sh  lint.sh  test.sh
tests/: test_basic.py
